# app_board_ricepes

./: pyproject.toml
samplesite/bboard/: admin.py  forms.py  models.py  urls.py  views.py
samplesite/bboard/static/bboard/: style.css
samplesite/bboard/templates/bboard/: by_rubric.html  create.html  index.html
samplesite/bboard/templates/layout/: basic.html
samplesite/samplesite/: settings.py
